

2007-03-26 James Fitzsimons <james.fitzsimons@gmail.com>

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Added class 
	  and method browser combos. Added ascx to list in CanCreateContentForMimeType().
	* EditorBindings.glade: Added checkbox for Class & Method combos to GeneralTextEditorPanel.
	* MonoDevelop.SourceEditor.Gui.OptionPanels/GeneralTextEditorPanel.cs: 
	  Added support for turning on  and off the class and method browser combos in the editor.
	* MonoDevelop.SourceEditor.Properties/TextEditorProperties.cs: Added 
	  ShowClassBrowser property.

2007-03-23  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs
	(GetCharAt): Need to check that offset < (len - 1) because the
	last iter won't have a char. Fixes bug #81216.

2007-03-19  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs
	(GetCharAt): Changed since we are now implementing
	ITextFile.GetCharAt

2007-03-16  Jeffrey Stedfast  <fejj@novell.com>

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs (DeleteLine):
	Emulate the Emacs Ctrl-K delete-line behavior (which appears to be
	what it was intended to emulate in the first place based on
	previous commit messages).

2007-02-27  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor.Properties/TextEditorProperties.cs,
	  MonoDevelop.SourceEditor.Gui.OptionPanels/BehaviorTextEditorPanel.cs,
	  MonoDevelop.SourceEditor.Gui.OptionPanels/MarkersTextEditorPanel.cs:
	  Removed unused namespace.
	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Use TextEditor for
	  formatting operations.
	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: The
	  ICompletionWidget interface is now obtained through the GetContent
	  method. Implemented some soon to be added ITextFile methods.
	* MonoDevelop.SourceEditor.FormattingStrategy/DefaultFormattingStrategy.cs,